# send-sms

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml  ci.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: config.rs  constants.rs  input.rs  lib.rs  main.rs
crates/freemobile-api/: Cargo.toml  README.md
crates/freemobile-api/src/: chunker.rs  client.rs  constants.rs  error.rs  lib.rs  sanitizer.rs  supported_emojis.rs
