[package]
name = "send-sms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Command-line interface for sending SMS via FreeMobile API"
keywords = ["sms", "freemobile", "cli", "notifications", "france"]
categories = ["command-line-utilities"]
readme = "README.md"

# Binary name matches crate name, no need to specify

[dependencies]
freemobile-api = "0.1.0"
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
unicode-segmentation = { workspace = true }
is-terminal = { workspace = true }
inquire = { workspace = true }
dotenv = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }

[features]
default = []