[package]
name = "freemobile-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Rust library for FreeMobile SMS API integration with comprehensive emoji support"
keywords = ["freemobile", "sms", "api", "france", "mobile"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[dependencies]
reqwest = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[features]
default = []
